--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
   "license": "ISC",
   "dependencies": {
     "bootstrap": "^5.2.1",
-    "react-router-dom": "^6.4.1"
+    "node": "^18.10.0",
+    "react-router-dom": "^6.4.1",
+    "server": "^1.0.37",
+    "server.js": "^1.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.15",
